[tool.poetry]
name = "fsdev"
version = "0.1.0"
description = "A super simple filesystem dev server"
authors = ["Tristan Slater <hello@trslater.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
bottle = "^0.12.19"

[tool.poetry.dev-dependencies]
pdoc = "^9.0.0"

[tool.poetry.scripts]
fsdev = "fsdev:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
